# actix_diesel_server

./: .env.example  .gitignore  Cargo.toml
migrations/2022-03-17-082331_books/: down.sql  up.sql
src/: database.rs  lib.rs  main.rs  renderer.rs  schema.rs  server.rs  templates.rs
src/handlers/: mod.rs
src/handlers/books/: controller.rs  mod.rs  model.rs
src/handlers/home/: controller.rs  mod.rs  router.rs
static/css/: books.css  test.css
static/js/: test.js
templates/: layout.html
templates/books/: index.html  search.html
templates/home/: index.html
