[package]
name = "actix_diesel_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "mainlib"
path = "src/lib.rs"

[[bin]]
name = "webserver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-rt = "1.0.0"
actix-web = "3"
anyhow = "1.0"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "*"
serde = { version = "1" }
serde_json = "1.0"
tera = "1.5"

[dev-dependencies]
anyhow = "1.0.42"
env_logger = "0.9.0"
